# jengine

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
shaders/: colored_triangle_mesh.vert  gradient.comp  gradient_color.comp
src/: deletion_stack.cpp  deletion_stack.hpp  engine.cpp  engine.hpp  window.cpp  window.hpp
src/renderer/: base.hpp  camera.cpp  camera.hpp  loaded_mesh_asset.hpp  three_dimensional.cpp  three_dimensional.hpp  two_dimensional.cpp  two_dimensional.hpp
src/renderer/gltf/: geo_surface.hpp  load_meshes.cpp  load_meshes.hpp  mesh_asset.cpp  mesh_asset.hpp
src/renderer/imgui/: context.cpp  context.hpp
src/renderer/vulkan/: compute_queue.cpp  compute_queue.hpp  debug.cpp  debug.hpp  deletion_queue.cpp  deletion_queue.hpp  deletion_stack.cpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_in_flight_data.cpp  frame_in_flight_data.hpp  graphics_queue.cpp  graphics_queue.hpp  image.cpp  image.hpp  immediate_submit.cpp  immediate_submit.hpp  initializers.cpp  initializers.hpp  instance.cpp  instance.hpp  memory_allocator.cpp  memory_allocator.hpp  physical_device.cpp  physical_device.hpp  pipelines.cpp  pipelines.hpp  queue.cpp  queue.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp
src/renderer/vulkan/buffers/: buffer.cpp  buffer.hpp  mesh_buffers.cpp  mesh_buffers.hpp
src/renderer/vulkan/descriptors/: allocator.cpp  allocator.hpp  draw_image_descriptors.cpp  draw_image_descriptors.hpp  layout_builder.cpp  layout_builder.hpp  manager.cpp  manager.hpp
src/renderer/vulkan/pipelines/: gradient_pipeline.cpp  gradient_pipeline.hpp  graphics_pipeline_builder.cpp  graphics_pipeline_builder.hpp  load_shader_module.cpp  load_shader_module.hpp  manager.cpp  manager.hpp  mesh_pipeline.cpp  mesh_pipeline.hpp  shared_compute_pipeline_layout.cpp  shared_compute_pipeline_layout.hpp  sky_pipeline.cpp  sky_pipeline.hpp  triangle_pipeline.cpp  triangle_pipeline.hpp
src/util/: should_be_unreachable.cpp  should_be_unreachable.hpp
